# quant

./: .gitignore  README.md
backend/: .env.example  =1.0  migrate_to_motherduck.py  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: backtests.py  data_management.py  market_data.py  results.py  seed_full.py  strategies.py
backend/app/core/: engine.py  vectorized.py
backend/app/data/: __init__.py  cache.py  fetcher.py  fetcher_extended.py  rate_limiter.py  transforms.py
backend/app/models/: __init__.py  backtest.py  cache.py  lhb.py  price.py  strategy.py
backend/app/schemas/: backtest.py  strategy.py
backend/app/strategies/: __init__.py  base.py  lhb_institution.py  ma5_breakout.py  registry.py
backend/app/utils/: metrics.py  trading_calendar.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/charts/: DrawdownChart.tsx  EquityCurve.tsx  ReturnsByHolding.tsx
frontend/src/components/metrics/: MetricsRow.tsx
frontend/src/components/tables/: RunsTable.tsx  TradeTable.tsx
frontend/src/hooks/: useBacktestPoll.ts
frontend/src/pages/: BacktestConfig.tsx  BacktestResult.tsx  Dashboard.tsx  DataManagement.tsx  LHBQuery.tsx  RunHistory.tsx  StrategyList.tsx
frontend/src/store/: useBacktestStore.ts
