[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finance-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "akshare>=1.12",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
]
