[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "finance-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "duckdb>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "akshare>=1.12",
    "baostock>=0.8",
    "tushare>=1.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
]
